symlookup v0.5.2 Fuu (ふう) [under process]
    * Fix default LDFLAGS for gcc-4.6.x
    * Optimize comparision function.

symlookup v0.5.1 Pino (ぴの): Oct, 12, 2010
    * Support for older bash-3.x in configure.
    * Improve and clarify documentation.
    * Minor fixes.

symlookup v0.5.0 Sakura (桜): May, 28, 2010
    * Portage support:
      - ebuilds query;
      - support for multiple ownership;
      - fast DB queries using mmap;
      - portage DB directory is configurable.
    * Extended regular expression may be used to limit libraries
      file names.
    * Add additional verbosity level for annoying messages.
    * Man page is optimized.
    * CLI API changes: 
      --ar_only long option is replaced by --ar-only;
      -v (--version) changed to -V and -v stands for --verbose.
    * Option added to specify rpm root directory.

symlookup v0.3.5 Neko (猫): Apr, 26, 2010
    * Project name is changed to more convenient one.
    * --disable-strip is added to configure.
    * Output may be arranged in tables.
    * RPM version 5 support.
    * Support for gcc-4.4 optimizations and mfpmath sse unit.
    * Code cleanup and optimization.
    * Configure script optimization and improvement.

symbol_lookup v0.3.1 Subaru (昴): Nov, 25, 2007
    * Makefile improvements.
    * Sort for the case -sort=file[,...] fixed.
    * nftw() replaced by fts utils, thus fix open bugs.
    * Extension check improvement: discard directory name.
    * ld behavior is mimicked for default search path detection
    * The same physical file will be processed only once,
      even in case of overlapped search paths
    * Read from stdin improved.

symbol_lookup v0.3 Sachiko (幸子): Nov, 11, 2007
    * License changed to GPL v.3.
    * Optional rpm support implemented.
    * Full featured configure script created.
    * Man page created.
    * A lot of minor bugfixes and improvements.
    * Documentation update.

symbol_lookup v0.2 Misato (郷): Jun, 27, 2007